# conio

./: CHANGELOG.md  LICENSE  README.md  conio.cabal
src/: ConIO.hs
src/ConIO/: Communication.hs  Core.hs  MonadSTM.hs  Race.hs  Workers.hs
test/: Main.hs
