cabal-version:      3.0
name:               conio
version:            0.0.0.1
synopsis:           A structured concurrency library
description:        `conio` aims to simplify concurrency in Haskell, providing an easy way to spawn threads with sane defaults. It uses structured concurrency to control the lifetime of threads. 
license:            BSD-3-Clause
license-file:       LICENSE
author:             Simon Reitinger
maintainer:         simre4775@gmail.com
copyright:          Simon Reitinger
category:           Concurrency
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/Simre1/conio

common common
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        GeneralizedNewtypeDeriving
        DerivingStrategies
        OverloadedRecordDot
        TypeFamilies
        DuplicateRecordFields
        NoFieldSelectors
    build-depends:
        base ^>=4.20.0.0,
        containers >= 0.7 && < 0.8,
        stm >= 2.5.3 && < 2.6,
        transformers >= 0.6.1 && < 0.7

library
    import:           common
    exposed-modules:
        ConIO
        ConIO.Core
        ConIO.Race
        ConIO.Communication
        ConIO.MonadSTM
        ConIO.Workers
    hs-source-dirs:   src

test-suite conio-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        tasty,
        tasty-hunit,
        conio
